<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="subtitle">My Nanodegree Apps!</string>
    <string name="first_app_name">POPULAR MOVIES</string>
    <string name="second_app_name">STOCK HAWK</string>
    <string name="third_app_name">BUILD IT BIGGER</string>
    <string name="fourth_app_name">MAKE YOUR APP MATERIAL</string>
    <string name="fifth_app_name">GO UBIQUITOUS</string>
    <string name="sixth_app_name">CAPSTONE</string>
</resources>
