<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.frustoo.myappportfolio.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/subtitle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textSize="@dimen/subtitle_font_size"
            android:layout_marginBottom="@dimen/subtitle_bottom_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/subtitle_text_view"
            android:layout_alignLeft="@id/subtitle_text_view"
            android:layout_alignRight="@id/subtitle_text_view"
            android:layout_alignStart="@id/subtitle_text_view"
            android:layout_below="@id/subtitle_text_view"
            android:orientation="vertical">

            <Button
                android:id="@+id/popular_movies_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_app_name"/>

            <Button
                android:id="@+id/stock_hawk_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_app_name"/>

            <Button
                android:id="@+id/build_it_bigger_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_app_name"/>

            <Button
                android:id="@+id/material_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_app_name"/>

            <Button
                android:id="@+id/ubiquitous_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_app_name"/>

            <Button
                android:id="@+id/capstone_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_app_name"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
